Avoid text overflow of card title

--- a/styles/card.less
+++ b/styles/card.less
@@ -13,6 +13,10 @@
       color: inherit;
       font-size: 1.1em;
       padding-bottom: 2px;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      min-width: 0;
     }
   }
 
